[gd_scene load_steps=2 format=3 uid="uid://b1yx5yvlbpvnl"]

[ext_resource type="Script" path="res://scripts/terrain_info_display.gd" id="1_lfwvt"]

[node name="TerrainInfoDisplay" type="PanelContainer"]
offset_right = 200.0
offset_bottom = 100.0
script = ExtResource("1_lfwvt")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TerrainInfo" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TerrainInfo"]
layout_mode = 2
text = "Terrain:"
horizontal_alignment = 2

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/TerrainInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "None"

[node name="ResourceInfo" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ResourceInfo"]
layout_mode = 2
text = "Resource:"
horizontal_alignment = 2

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/ResourceInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "None"

[node name="PositionInfo" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PositionInfo"]
layout_mode = 2
text = "Position:"
horizontal_alignment = 2

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/PositionInfo"]
layout_mode = 2
size_flags_horizontal = 3
text = "(0, 0)"
